--- a/memory_game/css/styles/styles.css
+++ b/memory_game/css/styles/styles.css
@@ -1,12 +1,80 @@
 body {
-text-align: center;
+  text-align: center;
+  margin:0;
+}
+
+.clearfix:after {
+visibility: hidden;
+display: block;
+content: " ";
+clear: both;
+height: 0;
+font-size: 0;
 }
 
 h1 {
 font-family: "Raleway", sans-serif;
 font-weight: 400;
+margin:0;
 }
 
 p {
 font-family: "Droid Serif", serif;
+}
+
+footer{
+  text-transform: uppercase;
+  padding: 20px;
+  background-color: #0D2C40;
+  color: white;
+  font-weight: 500;
+}
+
+.copyright{
+  float: left;
+}
+
+header {
+  background-color:#F15B31;
+  color: #FFFFFF;
+  padding-top:30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.message {
+  float: right;
+}
+
+.name {
+  font-weight:700;
+  color: #F15B31;
+}
+a:{
+  border-bottom: 2px solid transparent;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+a:hover {
+  border-color: white;
+}
+
+nav {
+ background-color: #00A6B3;
+ color: #FFFFFF;
+ padding-top: 20px;
+ padding-bottom: 20px;
+}
+
+main {
+  width: 850px;
+  margin-top: 35px;
+  margin-left: auto;
+  margin-right: auto;
+}
+img {
+  margin-top: 40px;
+  margin-left: 8px;
+  margin-right: 8px;
 }
