--- a/memory_game/css/styles/styles.css
+++ b/memory_game/css/styles/styles.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  font-family: 'Coiny', cursive;
   margin:0;
 }
 
@@ -14,12 +15,15 @@ font-size: 0;
 
 h1 {
 font-family: "Raleway", sans-serif;
+font-family: 'Coiny', cursive;
 font-weight: 400;
 margin:0;
 }
 
 p {
 font-family: "Droid Serif", serif;
+font-family: 'Coiny', cursive;
+
 }
 
 footer{
